@@ -1,5 +1,6 @@
 sdesc: "LilyPond documentation."
 category: Doc
-ldesc: "LilyPond Documentation in HTML, PS and DVI formats.
-This package contains the HTML, PostScript and DVI documentation for the
-LilyPond music typesetting software."
+ldesc: "LilyPond Documentation in HTML, PS, PDF and DVI formats.  This
+package contains the HTML, PostScript PDF and DVI documentation for
+the LilyPond music typesetting software.  Info and man pages are in
+the lilypond package."
