@@ -1,5 +1,15 @@
 2002-08-13  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/beam.cc (least_squares): Fix asymmetry and scary float
+	comparison.
+
+	* lily/stem.cc (calc_stem_info): Moved, documented, cleaned up and
+	fixed up-to-stem feature.
+
+	* scm/grob-description.scm (beamed-lengths): Subtract half a beam
+	thickness, to fix most ugly beams.  See input/test/stem.ly and
+	baerenreiter-sarabande.ly.
+
 	* input/test/stem.ly:
 	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: Play with
 	beamed-lengths.
